@@ -1,3 +1,11 @@
+Fri Dec  5 11:49:01 2003  Dale Wilson  <wilson_d@ociweb.com>
+
+        * orbsvcs/tests/FT_App/run_test_basic.pl:
+        * orbsvcs/tests/FT_App/run_test_detector.pl:
+        * orbsvcs/tests/FT_App/run_test_notifier.pl:
+        * orbsvcs/tests/FT_App/run_test_registry.pl:
+          Cleaning up the comments mostly.
+
 Thu Dec  4 16:46:15 2003  Dale Wilson  <wilson_d@ociweb.com>
 
         * orbsvcs/FT_ReplicationManager/FT_DefaultFaultAnalyzer.cpp:
